--- a/vite-template/package.json
+++ b/vite-template/package.json
@@ -14,8 +14,9 @@
     "antd": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.18",
-    "react-syntax-highlighter": "15.6.6"
+    "react-scroll": "^1.9.3",
+    "react-syntax-highlighter": "15.6.6",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
